Added mock standard curves

--- a/src/reporting/report.Rmd
+++ b/src/reporting/report.Rmd
@@ -101,8 +101,13 @@ Normalised connections
 
 ## Mock standard curves
 
-Bacteria
-<td valign="top"><img src="../figures/bact_mock_curve.png" ></td>
-
-Eukaryotes
-<td valign="top"><img src="../figures/euk_mock_curve.png" ></td>
+<table>
+  <tr>
+    <td>Bacteria</td>
+    <td>Eukaryotes</td>
+  </tr>
+  <tr>
+    <td valign="top"><img src="../figures/bact_mock_curve.png"></td>
+    <td valign="top"><img src="../figures/euk_mock_curve.png"></td>
+  </tr>
+ </table>
